--- a/css/responsive.css
+++ b/css/responsive.css
@@ -342,8 +342,14 @@
 }
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width:991px) {
+    .header-top-content{
+    display: flex;
+    color: #6b6b6b;
+    font-size: 12px;
+    justify-content: space-between;
+}
     .header-top-content .header-left ul li, .header-top-content .header-right ul li {
-        padding-right: 0px;
+        padding-right: 1px;
     }
     .navbar-nav .nav-item {
         padding: 2px;
